// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Versioning should get lowest target versions 1`] = `
[
  {
    "parsedVersion": 7,
    "target": "node",
    "version": "7",
  },
  {
    "parsedVersion": 50.5,
    "target": "firefox",
    "version": "50.5",
  },
  {
    "parsedVersion": 20,
    "target": "chrome",
    "version": "20",
  },
]
`;

exports[`Versioning should support multi env config in browserslist package.json 1`] = `
[
  {
    "parsedVersion": 16,
    "target": "samsung",
    "version": "16.0",
  },
  {
    "parsedVersion": 15.6,
    "target": "safari",
    "version": "15.6",
  },
  {
    "parsedVersion": 91,
    "target": "opera",
    "version": "91",
  },
  {
    "parsedVersion": 11.5,
    "target": "op_mob",
    "version": "11.5",
  },
  {
    "parsedVersion": 0,
    "target": "op_mini",
    "version": "all",
  },
  {
    "parsedVersion": 2.5,
    "target": "kaios",
    "version": "2.5",
  },
  {
    "parsedVersion": 15.6,
    "target": "ios_saf",
    "version": "15.6",
  },
  {
    "parsedVersion": 10,
    "target": "ie_mob",
    "version": "10",
  },
  {
    "parsedVersion": 9,
    "target": "ie",
    "version": "9",
  },
  {
    "parsedVersion": 102,
    "target": "firefox",
    "version": "102",
  },
  {
    "parsedVersion": 106,
    "target": "edge",
    "version": "106",
  },
  {
    "parsedVersion": 106,
    "target": "chrome",
    "version": "106",
  },
  {
    "parsedVersion": 7,
    "target": "bb",
    "version": "7",
  },
  {
    "parsedVersion": 13.18,
    "target": "baidu",
    "version": "13.18",
  },
  {
    "parsedVersion": 109,
    "target": "android",
    "version": "109",
  },
  {
    "parsedVersion": 13.4,
    "target": "and_uc",
    "version": "13.4",
  },
  {
    "parsedVersion": 13.1,
    "target": "and_qq",
    "version": "13.1",
  },
  {
    "parsedVersion": 109,
    "target": "and_ff",
    "version": "109",
  },
  {
    "parsedVersion": 109,
    "target": "and_chr",
    "version": "109",
  },
]
`;

exports[`Versioning should support resolving browserslist config in subdirectory 1`] = `
[
  {
    "parsedVersion": 70,
    "target": "chrome",
    "version": "70",
  },
]
`;

exports[`Versioning should support resolving browserslist config in subdirectory 2`] = `
[
  {
    "parsedVersion": 18,
    "target": "samsung",
    "version": "18.0",
  },
  {
    "parsedVersion": 15.6,
    "target": "safari",
    "version": "15.6",
  },
  {
    "parsedVersion": 93,
    "target": "opera",
    "version": "93",
  },
  {
    "parsedVersion": 73,
    "target": "op_mob",
    "version": "73",
  },
  {
    "parsedVersion": 0,
    "target": "op_mini",
    "version": "all",
  },
  {
    "parsedVersion": 2.5,
    "target": "kaios",
    "version": "2.5",
  },
  {
    "parsedVersion": 14.5,
    "target": "ios_saf",
    "version": "14.5-14.8",
  },
  {
    "parsedVersion": 102,
    "target": "firefox",
    "version": "102",
  },
  {
    "parsedVersion": 107,
    "target": "edge",
    "version": "107",
  },
  {
    "parsedVersion": 107,
    "target": "chrome",
    "version": "107",
  },
  {
    "parsedVersion": 109,
    "target": "android",
    "version": "109",
  },
  {
    "parsedVersion": 13.4,
    "target": "and_uc",
    "version": "13.4",
  },
  {
    "parsedVersion": 13.1,
    "target": "and_qq",
    "version": "13.1",
  },
  {
    "parsedVersion": 109,
    "target": "and_ff",
    "version": "109",
  },
  {
    "parsedVersion": 109,
    "target": "and_chr",
    "version": "109",
  },
]
`;

exports[`Versioning should support single array config in browserslist package.json 1`] = `
[
  {
    "parsedVersion": 16,
    "target": "samsung",
    "version": "16.0",
  },
  {
    "parsedVersion": 15.6,
    "target": "safari",
    "version": "15.6",
  },
  {
    "parsedVersion": 91,
    "target": "opera",
    "version": "91",
  },
  {
    "parsedVersion": 11.5,
    "target": "op_mob",
    "version": "11.5",
  },
  {
    "parsedVersion": 0,
    "target": "op_mini",
    "version": "all",
  },
  {
    "parsedVersion": 2.5,
    "target": "kaios",
    "version": "2.5",
  },
  {
    "parsedVersion": 15.6,
    "target": "ios_saf",
    "version": "15.6",
  },
  {
    "parsedVersion": 10,
    "target": "ie_mob",
    "version": "10",
  },
  {
    "parsedVersion": 9,
    "target": "ie",
    "version": "9",
  },
  {
    "parsedVersion": 102,
    "target": "firefox",
    "version": "102",
  },
  {
    "parsedVersion": 106,
    "target": "edge",
    "version": "106",
  },
  {
    "parsedVersion": 100,
    "target": "chrome",
    "version": "100",
  },
  {
    "parsedVersion": 7,
    "target": "bb",
    "version": "7",
  },
  {
    "parsedVersion": 13.18,
    "target": "baidu",
    "version": "13.18",
  },
  {
    "parsedVersion": 109,
    "target": "android",
    "version": "109",
  },
  {
    "parsedVersion": 13.4,
    "target": "and_uc",
    "version": "13.4",
  },
  {
    "parsedVersion": 13.1,
    "target": "and_qq",
    "version": "13.1",
  },
  {
    "parsedVersion": 109,
    "target": "and_ff",
    "version": "109",
  },
  {
    "parsedVersion": 109,
    "target": "and_chr",
    "version": "109",
  },
]
`;

exports[`Versioning should support string config in rule option 1`] = `
[
  {
    "parsedVersion": 18,
    "target": "samsung",
    "version": "18.0",
  },
  {
    "parsedVersion": 15.6,
    "target": "safari",
    "version": "15.6",
  },
  {
    "parsedVersion": 93,
    "target": "opera",
    "version": "93",
  },
  {
    "parsedVersion": 73,
    "target": "op_mob",
    "version": "73",
  },
  {
    "parsedVersion": 0,
    "target": "op_mini",
    "version": "all",
  },
  {
    "parsedVersion": 2.5,
    "target": "kaios",
    "version": "2.5",
  },
  {
    "parsedVersion": 14.5,
    "target": "ios_saf",
    "version": "14.5-14.8",
  },
  {
    "parsedVersion": 102,
    "target": "firefox",
    "version": "102",
  },
  {
    "parsedVersion": 107,
    "target": "edge",
    "version": "107",
  },
  {
    "parsedVersion": 107,
    "target": "chrome",
    "version": "107",
  },
  {
    "parsedVersion": 109,
    "target": "android",
    "version": "109",
  },
  {
    "parsedVersion": 13.4,
    "target": "and_uc",
    "version": "13.4",
  },
  {
    "parsedVersion": 13.1,
    "target": "and_qq",
    "version": "13.1",
  },
  {
    "parsedVersion": 109,
    "target": "and_ff",
    "version": "109",
  },
  {
    "parsedVersion": 109,
    "target": "and_chr",
    "version": "109",
  },
]
`;
